iptables-backup.rules
# Generated by iptables-save v1.8.4 on Tue Jun  3 07:10:35 2025
*filter
:INPUT ACCEPT [338811:542153565]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [330173:672497712]
-A INPUT -s 93.139.83.176/32 -j DROP
-A INPUT -s 149.50.218.166/32 -j DROP
-A INPUT -s 209.46.121.216/32 -j DROP
-A INPUT -s 149.102.232.36/32 -j DROP
-A INPUT -s 167.88.61.127/32 -j DROP
-A INPUT -s 177.152.92.153/32 -j DROP
-A INPUT -s 14.186.48.3/32 -j DROP
-A INPUT -s 179.191.8.196/32 -j DROP
-A INPUT -s 104.168.115.214/32 -j DROP
-A INPUT -s 14.187.195.36/32 -j DROP
-A INPUT -s 190.155.7.178/32 -j DROP
-A INPUT -s 181.232.242.82/32 -j DROP
-A INPUT -s 170.150.21.149/32 -j DROP
-A INPUT -s 14.186.102.227/32 -j DROP
-A INPUT -s 191.189.0.49/32 -j DROP
-A INPUT -s 93.139.83.176/32 -j DROP
-A INPUT -s 149.50.218.166/32 -j DROP
-A INPUT -s 201.171.22.173/32 -j DROP
-A INPUT -s 209.46.121.216/32 -j DROP
-A INPUT -s 149.102.232.36/32 -j DROP
-A INPUT -s 193.80.236.224/32 -j DROP
-A INPUT -s 145.224.73.149/32 -j DROP
-A INPUT -s 181.160.77.103/32 -j DROP
-A INPUT -s 167.88.61.127/32 -j DROP
-A INPUT -s 23.94.67.174/32 -j DROP
-A INPUT -s 201.171.22.173/32 -j DROP
-A INPUT -s 145.224.73.149/32 -j DROP
-A INPUT -s 23.94.67.174/32 -j DROP
-A INPUT -s 170.199.229.30/32 -j DROP
-A INPUT -s 14.170.34.108/32 -j DROP
-A INPUT -s 14.169.252.129/32 -j DROP
-A INPUT -s 14.169.207.26/32 -j DROP
-A INPUT -s 177.223.172.175/32 -j DROP
-A INPUT -s 113.188.14.14/32 -j DROP
-A INPUT -s 113.180.214.219/32 -j DROP
-A INPUT -s 164.163.142.199/32 -j DROP
-A INPUT -s 14.235.180.49/32 -j DROP
-A INPUT -s 14.255.132.250/32 -j DROP
-A INPUT -s 201.182.10.8/32 -j DROP
-A INPUT -s 113.189.184.153/32 -j DROP
-A INPUT -s 181.212.199.94/32 -j DROP
-A INPUT -s 179.6.73.9/32 -j DROP
-A INPUT -s 5.62.63.123/32 -j DROP
-A INPUT -s 168.91.33.254/32 -j DROP
-A INPUT -s 138.229.105.247/32 -j DROP
-A INPUT -s 94.156.14.12/32 -j DROP
-A INPUT -s 45.88.97.242/32 -j DROP
-A INPUT -s 149.102.247.247/32 -j DROP
-A INPUT -s 187.195.67.94/32 -j DROP
-A INPUT -s 178.165.170.240/32 -j DROP
-A INPUT -s 146.70.86.220/32 -j DROP
-A INPUT -s 77.25.40.86/32 -j DROP
-A INPUT -s 170.199.227.171/32 -j DROP
-A INPUT -s 138.229.96.79/32 -j DROP
-A INPUT -s 170.199.228.28/32 -j DROP
-A INPUT -s 191.101.157.132/32 -j DROP
-A INPUT -s 152.22.117.23/32 -j DROP
-A INPUT -s 89.205.77.216/32 -j DROP
-A INPUT -s 152.22.54.23/32 -j DROP
-A INPUT -s 84.122.190.12/32 -j DROP
-A INPUT -s 85.100.247.87/32 -j DROP
-A INPUT -s 46.188.141.129/32 -j DROP
-A INPUT -s 79.251.205.144/32 -j DROP
-A INPUT -s 152.22.116.27/32 -j DROP
-A INPUT -s 152.22.48.26/32 -j DROP
-A INPUT -s 92.242.228.156/32 -j DROP
-A INPUT -s 162.19.169.60/32 -j DROP
-A INPUT -s 88.238.192.233/32 -j DROP
-A INPUT -s 141.136.13.71/32 -j DROP
-A INPUT -s 46.188.168.117/32 -j DROP
-A INPUT -s 79.223.28.85/32 -j DROP
-A INPUT -s 94.24.36.91/32 -j DROP
-A INPUT -s 217.138.215.235/32 -j DROP
-A INPUT -s 80.187.121.214/32 -j DROP
-A INPUT -s 88.230.237.19/32 -j DROP
-A INPUT -s 135.125.191.253/32 -j DROP
-A INPUT -s 95.70.141.215/32 -j DROP
-A INPUT -s 78.153.45.144/32 -j DROP
-A INPUT -s 79.116.160.139/32 -j DROP
-A INPUT -s 176.61.154.146/32 -j DROP
-A INPUT -s 77.78.224.239/32 -j DROP
-A INPUT -s 45.150.175.242/32 -j DROP
-A INPUT -s 23.166.88.18/32 -j DROP
-A INPUT -s 51.222.159.205/32 -j DROP
-A INPUT -s 185.5.87.134/32 -j DROP
-A INPUT -s 38.99.82.158/32 -j DROP
-A INPUT -s 38.10.70.34/32 -j DROP
-A INPUT -s 78.188.145.245/32 -j DROP
-A INPUT -s 79.116.247.57/32 -j DROP
-A INPUT -s 176.67.80.131/32 -j DROP
-A INPUT -s 94.156.14.7/32 -j DROP
-A INPUT -s 212.119.33.21/32 -j DROP
-A INPUT -s 88.254.3.163/32 -j DROP
-A INPUT -s 2.214.21.152/32 -j DROP
-A INPUT -s 94.67.168.50/32 -j DROP
-A INPUT -s 176.67.80.130/32 -j DROP
-A INPUT -s 37.243.141.101/32 -j DROP
-A INPUT -s 31.217.48.211/32 -j DROP
-A INPUT -s 45.189.57.137/32 -j DROP
-A INPUT -s 78.134.248.153/32 -j DROP
-A INPUT -s 37.130.70.156/32 -j DROP
-A INPUT -s 88.247.78.100/32 -j DROP
-A INPUT -s 104.28.249.210/32 -j DROP
-A INPUT -s 104.28.217.210/32 -j DROP
-A INPUT -s 212.15.177.48/32 -j DROP
-A INPUT -s 188.3.114.176/32 -j DROP
-A INPUT -s 156.146.60.89/32 -j DROP
-A INPUT -s 37.242.148.69/32 -j DROP
-A INPUT -s 105.154.211.245/32 -j DROP
-A INPUT -s 201.138.137.52/32 -j DROP
-A INPUT -s 79.127.229.170/32 -j DROP
-A INPUT -s 149.86.143.32/32 -j DROP
-A INPUT -s 79.117.50.208/32 -j DROP
-A INPUT -s 200.24.157.118/32 -j DROP
-A INPUT -s 45.159.250.17/32 -j DROP
-A INPUT -s 77.77.216.82/32 -j DROP
-A INPUT -s 156.146.60.140/32 -j DROP
-A INPUT -s 37.46.115.25/32 -j DROP
-A INPUT -s 156.146.60.79/32 -j DROP
-A INPUT -s 156.146.60.66/32 -j DROP
-A INPUT -s 195.87.79.174/32 -j DROP
-A INPUT -s 190.93.96.25/32 -j DROP
-A INPUT -s 190.93.96.27/32 -j DROP
-A INPUT -s 216.131.105.100/32 -j DROP
-A INPUT -s 216.131.105.101/32 -j DROP
-A INPUT -s 86.122.89.168/32 -j DROP
-A INPUT -s 37.63.31.25/32 -j DROP
-A INPUT -s 181.59.3.220/32 -j DROP
-A INPUT -s 93.22.151.139/32 -j DROP
-A INPUT -s 85.203.15.66/32 -j DROP
-A INPUT -s 95.91.249.185/32 -j DROP
-A INPUT -s 187.190.167.162/32 -j DROP
-A INPUT -s 190.93.96.31/32 -j DROP
-A INPUT -s 185.205.18.140/32 -j DROP
-A INPUT -s 190.93.96.33/32 -j DROP
-A INPUT -s 190.93.96.30/32 -j DROP
-A INPUT -s 85.203.15.83/32 -j DROP
-A INPUT -s 93.176.158.197/32 -j DROP
-A INPUT -s 146.70.27.148/32 -j DROP
-A INPUT -s 81.199.26.98/32 -j DROP
-A INPUT -s 81.199.26.97/32 -j DROP
-A INPUT -s 81.199.26.104/32 -j DROP
-A INPUT -s 190.93.96.29/32 -j DROP
-A INPUT -s 81.199.26.95/32 -j DROP
-A INPUT -s 85.203.15.52/32 -j DROP
-A INPUT -s 85.203.15.95/32 -j DROP
-A INPUT -s 85.203.15.81/32 -j DROP
-A INPUT -s 80.187.67.55/32 -j DROP
-A INPUT -s 212.200.141.139/32 -j DROP
-A INPUT -s 37.48.80.82/32 -j DROP
-A INPUT -s 86.124.186.153/32 -j DROP
-A INPUT -s 88.230.237.171/32 -j DROP
-A INPUT -s 5.62.60.54/32 -j DROP
-A INPUT -s 46.197.72.44/32 -j DROP
-A INPUT -s 5.62.60.55/32 -j DROP
-A INPUT -s 31.145.126.190/32 -j DROP
-A INPUT -s 193.148.251.203/32 -j DROP
-A INPUT -s 141.98.141.211/32 -j DROP
-A INPUT -s 78.163.142.186/32 -j DROP
-A INPUT -s 95.173.183.132/32 -j DROP
-A INPUT -s 179.124.139.149/32 -j DROP
-A INPUT -s 88.245.181.200/32 -j DROP
-A INPUT -s 95.70.141.204/32 -j DROP
-A INPUT -s 45.84.136.164/32 -j DROP
-A INPUT -s 217.255.165.245/32 -j DROP
-A INPUT -s 91.242.248.234/32 -j DROP
-A INPUT -s 5.62.60.53/32 -j DROP
-A INPUT -s 88.235.224.104/32 -j DROP
-A INPUT -s 37.25.87.117/32 -j DROP
-A INPUT -s 92.45.44.208/32 -j DROP
-A INPUT -s 45.91.21.2/32 -j DROP
-A INPUT -s 85.203.44.226/32 -j DROP
-A INPUT -s 89.205.56.52/32 -j DROP
-A INPUT -s 85.203.44.244/32 -j DROP
-A INPUT -s 85.203.44.211/32 -j DROP
-A INPUT -s 85.203.44.213/32 -j DROP
-A INPUT -s 95.211.143.111/32 -j DROP
-A INPUT -s 146.70.175.60/32 -j DROP
-A INPUT -s 176.1.134.26/32 -j DROP
-A INPUT -s 5.62.63.227/32 -j DROP
-A INPUT -s 85.108.111.131/32 -j DROP
-A INPUT -s 212.23.215.180/32 -j DROP
-A INPUT -s 78.190.126.236/32 -j DROP
-A INPUT -s 178.190.140.154/32 -j DROP
-A INPUT -s 5.62.63.226/32 -j DROP
-A INPUT -s 46.1.230.126/32 -j DROP
-A INPUT -s 109.245.206.231/32 -j DROP
-A INPUT -s 5.62.61.231/32 -j DROP
-A INPUT -s 190.239.89.144/32 -j DROP
-A INPUT -s 46.254.132.11/32 -j DROP
-A INPUT -s 185.184.192.220/32 -j DROP
-A INPUT -s 38.191.117.250/32 -j DROP
-A INPUT -s 5.62.61.230/32 -j DROP
-A INPUT -s 2.137.169.139/32 -j DROP
-A INPUT -s 121.127.46.146/32 -j DROP
-A INPUT -s 193.106.249.118/32 -j DROP
-A INPUT -s 216.131.89.131/32 -j DROP
-A INPUT -s 95.91.238.96/32 -j DROP
-A INPUT -s 89.39.106.102/32 -j DROP
-A INPUT -s 109.228.208.50/32 -j DROP
-A INPUT -s 45.134.9.205/32 -j DROP
-A INPUT -s 85.106.186.145/32 -j DROP
-A INPUT -s 176.67.87.31/32 -j DROP
-A INPUT -s 176.67.82.174/32 -j DROP
-A INPUT -s 185.141.119.67/32 -j DROP
-A INPUT -s 5.62.63.225/32 -j DROP
-A INPUT -s 185.141.119.81/32 -j DROP
-A INPUT -s 185.141.119.79/32 -j DROP
-A INPUT -s 149.36.50.178/32 -j DROP
-A INPUT -s 185.141.119.47/32 -j DROP
-A INPUT -s 95.5.110.59/32 -j DROP
-A INPUT -s 51.75.67.78/32 -j DROP
-A INPUT -s 86.124.187.17/32 -j DROP
-A INPUT -s 104.28.216.173/32 -j DROP
-A INPUT -s 185.141.119.51/32 -j DROP
-A INPUT -s 80.187.121.90/32 -j DROP
-A INPUT -s 185.141.119.53/32 -j DROP
-A INPUT -s 185.141.119.75/32 -j DROP
-A INPUT -s 181.214.131.55/32 -j DROP
-A INPUT -s 185.141.119.121/32 -j DROP
-A INPUT -s 185.141.119.77/32 -j DROP
-A INPUT -s 185.141.119.123/32 -j DROP
-A INPUT -s 109.175.39.95/32 -j DROP
-A INPUT -s 185.141.119.83/32 -j DROP
-A INPUT -s 185.141.119.85/32 -j DROP
-A INPUT -s 185.141.119.57/32 -j DROP
-A INPUT -s 196.77.25.178/32 -j DROP
-A INPUT -s 185.141.119.87/32 -j DROP
-A INPUT -s 212.200.247.165/32 -j DROP
-A INPUT -s 185.141.119.109/32 -j DROP
-A INPUT -s 94.198.41.136/32 -j DROP
-A INPUT -s 185.141.119.61/32 -j DROP
-A INPUT -s 78.163.143.184/32 -j DROP
-A INPUT -s 88.238.13.73/32 -j DROP
-A INPUT -s 185.141.119.59/32 -j DROP
-A INPUT -s 185.141.119.115/32 -j DROP
-A INPUT -s 212.200.181.147/32 -j DROP
-A INPUT -s 31.206.210.132/32 -j DROP
-A INPUT -s 185.141.119.93/32 -j DROP
-A INPUT -s 46.2.224.158/32 -j DROP
-A INPUT -s 94.198.41.134/32 -j DROP
-A INPUT -s 159.242.234.202/32 -j DROP
-A INPUT -s 186.151.96.64/32 -j DROP
-A INPUT -s 51.91.248.209/32 -j DROP
-A INPUT -s 185.141.119.63/32 -j DROP
-A INPUT -s 185.141.119.65/32 -j DROP
-A INPUT -s 185.141.119.103/32 -j DROP
-A INPUT -s 109.165.157.208/32 -j DROP
-A INPUT -s 185.141.119.101/32 -j DROP
-A INPUT -s 185.141.119.99/32 -j DROP
-A INPUT -s 109.219.70.102/32 -j DROP
-A INPUT -s 92.92.127.88/32 -j DROP
-A INPUT -s 78.163.181.225/32 -j DROP
-A INPUT -s 185.177.125.58/32 -j DROP
-A INPUT -s 77.78.224.99/32 -j DROP
-A INPUT -s 93.231.136.111/32 -j DROP
-A INPUT -s 94.198.41.108/32 -j DROP
-A INPUT -s 188.26.211.93/32 -j DROP
-A INPUT -s 172.111.181.249/32 -j DROP
-A INPUT -s 104.250.183.241/32 -j DROP
-A INPUT -s 138.199.43.2/32 -j DROP
-A INPUT -s 138.199.31.8/32 -j DROP
-A INPUT -s 146.70.181.250/32 -j DROP
-A INPUT -s 172.94.78.249/32 -j DROP
-A INPUT -s 172.111.208.241/32 -j DROP
-A INPUT -s 149.50.217.196/32 -j DROP
-A INPUT -s 45.74.58.249/32 -j DROP
-A INPUT -s 149.88.25.228/32 -j DROP
-A INPUT -s 185.26.174.170/32 -j DROP
-A INPUT -s 172.94.110.242/32 -j DROP
-A INPUT -s 172.94.119.250/32 -j DROP
-A INPUT -s 149.102.243.23/32 -j DROP
-A INPUT -s 217.148.140.150/32 -j DROP
-A INPUT -s 172.94.20.241/32 -j DROP
-A INPUT -s 45.74.11.250/32 -j DROP
-A INPUT -s 172.94.84.241/32 -j DROP
-A INPUT -s 172.111.220.249/32 -j DROP
-A INPUT -s 45.74.51.249/32 -j DROP
-A INPUT -s 149.102.238.165/32 -j DROP
-A INPUT -s 172.94.104.249/32 -j DROP
-A INPUT -s 149.40.52.227/32 -j DROP
-A INPUT -s 172.111.226.241/32 -j DROP
-A INPUT -s 146.70.123.84/32 -j DROP
-A INPUT -s 45.134.142.85/32 -j DROP
-A INPUT -s 149.102.244.53/32 -j DROP
-A INPUT -s 172.94.94.241/32 -j DROP
-A INPUT -s 45.74.1.249/32 -j DROP
-A INPUT -s 172.111.206.249/32 -j DROP
-A INPUT -s 172.111.183.241/32 -j DROP
-A INPUT -s 146.70.212.102/32 -j DROP
-A INPUT -s 138.199.18.156/32 -j DROP
-A INPUT -s 149.40.59.84/32 -j DROP
-A INPUT -s 172.111.128.241/32 -j DROP
-A INPUT -s 172.94.113.249/32 -j DROP
-A INPUT -s 103.107.197.180/32 -j DROP
-A INPUT -s 143.244.44.138/32 -j DROP
-A INPUT -s 149.36.50.179/32 -j DROP
-A INPUT -s 103.109.103.61/32 -j DROP
-A INPUT -s 149.40.51.50/32 -j DROP
-A INPUT -s 80.194.20.56/32 -j DROP
-A INPUT -s 94.198.41.139/32 -j DROP
-A INPUT -s 45.134.213.38/32 -j DROP
-A INPUT -s 185.183.107.151/32 -j DROP
-A INPUT -s 154.47.30.182/32 -j DROP
-A INPUT -s 91.228.216.121/32 -j DROP
-A INPUT -s 107.175.196.99/32 -j DROP
-A INPUT -s 5.254.23.84/32 -j DROP
-A INPUT -s 103.107.199.180/32 -j DROP
-A INPUT -s 185.244.212.24/32 -j DROP
-A INPUT -s 185.244.212.182/32 -j DROP
-A INPUT -s 94.198.41.125/32 -j DROP
-A INPUT -s 94.198.41.138/32 -j DROP
-A INPUT -s 5.254.112.194/32 -j DROP
-A INPUT -s 149.50.211.73/32 -j DROP
-A INPUT -s 149.102.251.21/32 -j DROP
-A INPUT -s 103.1.215.99/32 -j DROP
-A INPUT -s 91.132.139.119/32 -j DROP
-A INPUT -s 5.253.207.14/32 -j DROP
-A INPUT -s 91.132.139.124/32 -j DROP
-A INPUT -s 91.132.139.125/32 -j DROP
-A INPUT -s 185.244.212.20/32 -j DROP
-A INPUT -s 94.198.41.101/32 -j DROP
-A INPUT -s 91.132.139.126/32 -j DROP
-A INPUT -s 185.9.19.117/32 -j DROP
-A INPUT -s 185.244.212.23/32 -j DROP
-A INPUT -s 185.183.107.158/32 -j DROP
-A INPUT -s 94.198.41.141/32 -j DROP
-A INPUT -s 185.183.107.157/32 -j DROP
-A INPUT -s 94.198.41.115/32 -j DROP
-A INPUT -s 5.253.207.10/32 -j DROP
-A INPUT -s 94.198.41.99/32 -j DROP
-A INPUT -s 91.132.139.123/32 -j DROP
-A INPUT -s 185.9.19.123/32 -j DROP
-A INPUT -s 185.9.19.121/32 -j DROP
-A INPUT -s 185.244.212.185/32 -j DROP
-A INPUT -s 94.198.41.100/32 -j DROP
-A INPUT -s 94.198.41.135/32 -j DROP
-A INPUT -s 185.108.107.122/32 -j DROP
-A INPUT -s 185.244.212.180/32 -j DROP
-A INPUT -s 185.244.212.181/32 -j DROP
-A INPUT -s 185.183.107.152/32 -j DROP
-A INPUT -s 94.198.41.109/32 -j DROP
-A INPUT -s 185.183.107.148/32 -j DROP
-A INPUT -s 185.9.19.120/32 -j DROP
-A INPUT -s 78.182.203.93/32 -j DROP
-A INPUT -s 146.70.186.196/32 -j DROP
-A INPUT -s 103.109.103.118/32 -j DROP
-A INPUT -s 177.235.72.235/32 -j DROP
-A INPUT -s 108.181.50.190/32 -j DROP
-A INPUT -s 45.134.140.229/32 -j DROP
-A INPUT -s 94.198.41.116/32 -j DROP
-A INPUT -s 108.181.52.147/32 -j DROP
-A INPUT -s 149.19.169.2/32 -j DROP
-A INPUT -s 172.56.163.60/32 -j DROP
-A INPUT -s 38.25.16.131/32 -j DROP
-A INPUT -s 94.198.41.118/32 -j DROP
-A INPUT -s 94.198.41.107/32 -j DROP
-A INPUT -s 64.31.3.117/32 -j DROP
-A INPUT -s 149.34.242.60/32 -j DROP
-A INPUT -s 5.253.207.7/32 -j DROP
-A INPUT -s 185.244.212.27/32 -j DROP
-A INPUT -s 185.141.119.89/32 -j DROP
-A INPUT -s 198.46.249.55/32 -j DROP
-A INPUT -s 179.6.3.114/32 -j DROP
-A INPUT -s 191.96.101.180/32 -j DROP
-A INPUT -s 185.177.125.181/32 -j DROP
-A INPUT -s 169.150.196.147/32 -j DROP
-A INPUT -s 212.8.243.131/32 -j DROP
-A INPUT -s 91.132.139.116/32 -j DROP
-A INPUT -s 91.246.58.171/32 -j DROP
-A INPUT -s 194.33.45.121/32 -j DROP
-A INPUT -s 69.166.116.103/32 -j DROP
-A INPUT -s 132.157.131.112/32 -j DROP
-A INPUT -s 5.253.205.123/32 -j DROP
-A INPUT -s 94.198.41.105/32 -j DROP
-A INPUT -s 94.198.41.131/32 -j DROP
-A INPUT -s 185.149.195.105/32 -j DROP
-A INPUT -s 185.9.19.119/32 -j DROP
-A INPUT -s 68.132.38.189/32 -j DROP
-A INPUT -s 186.32.219.15/32 -j DROP
-A INPUT -s 138.199.18.136/32 -j DROP
-A INPUT -s 46.1.227.110/32 -j DROP
-A INPUT -s 179.9.208.96/32 -j DROP
-A INPUT -s 185.108.107.155/32 -j DROP
-A INPUT -s 91.132.139.120/32 -j DROP
-A INPUT -s 194.33.45.99/32 -j DROP
-A INPUT -s 181.78.19.142/32 -j DROP
-A INPUT -s 194.33.45.65/32 -j DROP
-A INPUT -s 45.154.138.108/32 -j DROP
-A INPUT -s 95.70.130.235/32 -j DROP
-A INPUT -s 169.150.205.98/32 -j DROP
-A INPUT -s 108.181.50.166/32 -j DROP
-A INPUT -s 85.203.15.221/32 -j DROP
-A INPUT -s 41.143.148.95/32 -j DROP
-A INPUT -s 13.212.95.135/32 -j DROP
-A INPUT -s 185.183.107.155/32 -j DROP
-A INPUT -s 194.33.45.97/32 -j DROP
-A INPUT -s 198.23.143.74/32 -j DROP
-A INPUT -s 78.28.152.113/32 -j DROP
-A INPUT -s 212.32.90.13/32 -j DROP
-A INPUT -s 146.70.186.150/32 -j DROP
-A INPUT -s 78.80.228.150/32 -j DROP
-A INPUT -s 84.17.35.74/32 -j DROP
-A INPUT -s 146.70.186.182/32 -j DROP
-A INPUT -s 149.88.22.20/32 -j DROP
-A INPUT -s 86.124.29.206/32 -j DROP
-A INPUT -s 82.0.59.125/32 -j DROP
-A INPUT -s 81.199.26.54/32 -j DROP
-A INPUT -s 177.37.132.79/32 -j DROP
-A INPUT -s 187.189.69.130/32 -j DROP
-A INPUT -s 88.248.194.240/32 -j DROP
-A INPUT -s 46.148.145.106/32 -j DROP
-A INPUT -s 94.23.9.170/32 -j DROP
-A INPUT -s 13.80.134.180/32 -j DROP
-A INPUT -s 195.114.209.50/32 -j DROP
-A INPUT -s 123.30.154.171/32 -j DROP
-A INPUT -s 65.21.52.41/32 -j DROP
-A INPUT -s 115.127.31.66/32 -j DROP
-A INPUT -s 47.236.255.30/32 -j DROP
-A INPUT -s 145.239.196.123/32 -j DROP
-A INPUT -s 57.129.81.201/32 -j DROP
-A INPUT -s 8.219.64.236/32 -j DROP
-A INPUT -s 38.54.71.67/32 -j DROP
-A INPUT -s 160.30.83.10/32 -j DROP
-A INPUT -s 213.152.162.99/32 -j DROP
-A INPUT -s 35.236.109.134/32 -j DROP
-A INPUT -s 147.182.180.242/32 -j DROP
-A INPUT -s 78.28.152.111/32 -j DROP
-A INPUT -s 149.126.216.234/32 -j DROP
-A INPUT -s 45.137.249.201/32 -j DROP
-A INPUT -s 159.146.45.189/32 -j DROP
-A INPUT -s 88.238.45.124/32 -j DROP
-A INPUT -s 45.154.138.106/32 -j DROP
-A INPUT -s 45.154.138.118/32 -j DROP
-A INPUT -s 45.154.138.156/32 -j DROP
-A INPUT -s 45.154.138.129/32 -j DROP
-A INPUT -s 45.154.138.132/32 -j DROP
-A INPUT -s 109.245.198.216/32 -j DROP
-A INPUT -s 200.174.198.205/32 -j DROP
-A INPUT -s 200.174.198.57/32 -j DROP
-A INPUT -s 200.174.198.87/32 -j DROP
-A INPUT -s 172.183.17.87/32 -j DROP
-A INPUT -s 88.254.3.182/32 -j DROP
-A INPUT -s 81.199.26.70/32 -j DROP
-A INPUT -s 85.203.15.169/32 -j DROP
-A INPUT -s 85.203.15.158/32 -j DROP
-A INPUT -s 146.70.28.194/32 -j DROP
-A INPUT -s 45.182.70.180/32 -j DROP
COMMIT
# Completed on Tue Jun  3 07:10:35 2025
